Minor code cleanup
Test: existing
Bug: N/A
Change-Id: I431a4d9f25add779f69b7f2836da5874f93bd985

GitOrigin-RevId: 6a5d4e4eb79b380959243bedc1e7add754c85bf7